package com.example.pecl_pcd_final.Clases;

import com.example.pecl_pcd_final.Entorno;

public class Ser extends Thread{

    String identificador;
    Entorno entorno;

}
