@startuml
'https://plantuml.com/class-diagram
@startuml
class Ser
class Humano
class Zombie
class Entorno
class Tunel
class ZonaComun
class ZonaDescanso
class ListaHilos

Ser <|-- Humano
Ser <|-- Zombie
ListaHilos <|-- Entorno

Humano --> Entorno
Zombie --> Entorno

Humano --> Tunel
Humano --> ZonaComun
Humano --> ZonaDescanso

Humano --> Zombie : morir()


@enduml
abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}

@enduml